Corrigida layout imagens

--- a/index.html
+++ b/index.html
@@ -909,7 +909,13 @@
             <h1>Picachu</h1>
             <h2>Aparência</h2>
             <p>
-              os Pikachus são pequenos roedores de quarenta centímetros e de seis quilogramas,[10] com um corpo redondo, e pernas curtas e uma longa cauda em seu. com exceção de suas duas listras marrom nas costas e a ponta de suas orelhas pretas, eles também tem dois discos vermelhos em cada bochecha e sua cauda quando macho tem um formato de um raio, mas se o Pikachu for fêmea sua cauda ganha um coração na ponta. Geralmente são bípedes.
+              os Pikachus são pequenos roedores de quarenta centímetros e de
+              seis quilogramas,[10] com um corpo redondo, e pernas curtas e uma
+              longa cauda em seu. com exceção de suas duas listras marrom nas
+              costas e a ponta de suas orelhas pretas, eles também tem dois
+              discos vermelhos em cada bochecha e sua cauda quando macho tem um
+              formato de um raio, mas se o Pikachu for fêmea sua cauda ganha um
+              coração na ponta. Geralmente são bípedes.
             </p>
             <br />
           </div>
@@ -918,14 +924,32 @@
             <h1>Raichu</h1>
             <h2>Aparência</h2>
             <p>
-              Raichu possui corpo similar a de um rato e a de uma raposa, é de cor alaranjada, suas bochechas são amarelo escuro e ele possui uma longa cauda, com um raio em sua ponta. sua barriga é branca, seus pés são achatados, suas mãos não possuem dedos e são de forma um pouco triangular. suas orelhas são bem, exoticas, digamos assim. são de cor amarela e pretas. ele possui braços pequenos e pés grandes. suas mãos são manchadas de preto.
+              Raichu possui corpo similar a de um rato e a de uma raposa, é de
+              cor alaranjada, suas bochechas são amarelo escuro e ele possui uma
+              longa cauda, com um raio em sua ponta. sua barriga é branca, seus
+              pés são achatados, suas mãos não possuem dedos e são de forma um
+              pouco triangular. suas orelhas são bem, exoticas, digamos assim.
+              são de cor amarela e pretas. ele possui braços pequenos e pés
+              grandes. suas mãos são manchadas de preto.
             </p>
             <h2>Curiosidade</h2>
-            <p>Raichu é um Pokémon bípede. Para diferenciar os gêneros, a Raichu fêmea possui uma cauda achatada
-
-              , enquanto a cauda do macho é pontiaguda.</p>
-            <img src="img/12.png" width="45%" alt="">
-            <img src="img/12+.png" width="45%" alt="">
+            <p>
+              Raichu é um Pokémon bípede. Para diferenciar os gêneros, a Raichu
+              fêmea possui uma cauda achatada , enquanto a cauda do macho é
+              pontiaguda.
+            </p>
+            <img
+              class="curiosidade fluid"
+              src="img/12.png"
+              width="45%"
+              alt=""
+            />
+            <img
+              class="curiosidade fluid"
+              src="img/12+.png"
+              width="45%"
+              alt=""
+            />
           </div>
         </div>
       </div>
