--- a/index.html
+++ b/index.html
@@ -955,6 +955,18 @@
       </div>
     </section>
 
+    <footer id="rodape">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-white"> 
+                   <a href=""> <i class="fab fa-facebook"></i></a>
+                   <a href=""> <i class="fab fa-instagram"></i></a>
+                </div>
+                <div class="col-md-6 text-white"> &copy;2022 Higor</div>
+            </div>
+        </div>
+    </footer>
+
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script
