--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <nav class="navbar navbar-expand-md fixed-top navbar-transparente">
         <div class="container">
           <a href="index.html">
+            <img src="img/pokebola_aberta.webp" width="50" alt="">
             <img src="img/pokedex.png" width="150" alt=""
           /></a>
           <!-- i hamburguer -->
@@ -941,13 +942,11 @@
             <img
               class="curiosidade fluid"
               src="img/12.png"
-              width="45%"
               alt=""
             />
             <img
               class="curiosidade fluid"
               src="img/12+.png"
-              width="45%"
               alt=""
             />
           </div>
