update name pokemon

--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
             </p>
           </div>
           <div class="col-md-4">
-            <h1>Picachu</h1>
+            <h1>Pikachu</h1>
             <h2>Aparência</h2>
             <p>
               os Pikachus são pequenos roedores de quarenta centímetros e de
