--- a/html/pokemons_classicos.html
+++ b/html/pokemons_classicos.html
@@ -47,7 +47,10 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="html/pokemons_classicos.html">Pokémons Clássicos</a>
+                <a class="nav-link" href="index.html">Pokémons Clássicos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Pokémons Lendários</a>
               </li>
             </ul>
           </div>
@@ -955,8 +958,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-white"> 
-                   <a href=""> <i class="fab fa-facebook"></i></a>
-                   <a href=""> <i class="fab fa-instagram"></i></a>
+                   <a href="https://www.facebook.com/higor.fonseca.75/"> <i class="fab fa-facebook"></i></a>
+                   <a href="https://www.instagram.com/guin_alvesmtv/"> <i class="fab fa-instagram"></i></a>
                 </div>
                 <div class="col-md-6 text-white"> &copy;2022 Higor</div>
             </div>
