--- a/index.html
+++ b/index.html
@@ -955,8 +955,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-white"> 
-                   <a href=""> <i class="fab fa-facebook"></i></a>
-                   <a href=""> <i class="fab fa-instagram"></i></a>
+                  <a href="https://www.facebook.com/higor.fonseca.75/"> <i class="fab fa-facebook"></i></a>
+                  <a href="https://www.instagram.com/guin_alvesmtv/"> <i class="fab fa-instagram"></i></a>
                 </div>
                 <div class="col-md-6 text-white"> &copy;2022 Higor</div>
             </div>
